Seem to have fixed the Gulp woes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 			<div class="sub">( Bandalamenti-esque music intensifies )</div>
 		</section>
 
-		<section>Q & Eh?</section>
+		<section class="slide-owls">The pages are not what they seem</section>
+
+		<section class="slide-q-eh">Q & Eh?</section>
 	</div>
 </div>
 
