--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title></title>
+	<title>What Is It? ( WordCamp Montréal 2018 )</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -12,11 +12,9 @@
 	<link rel="apple-touch-icon" href="icon.png">
 	<!-- Place favicon.ico in the root directory -->
 
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,600,700,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,900" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/main.css">
-	<script src="vendors/reveal.js"></script>
-	<script src="vendors/reveal.js/js/reveal.js"></script>
 </head>
 
 <body>
@@ -24,19 +22,89 @@
 
 <div class="reveal">
 	<div class="slides">
-		<section class="cover">
+
+		<section class="pre-talk" data-background="images/breaking-news.png"></section>
+
+		<section class="cover center">
 			<h1 class="main-title"><span class="title-part-1">What</span> <span class="title-part-2">Is It?</span></h1>
-
-			<div class="bg" role="presentation">
-				<img src="images/paul-gilmore-709205-unsplash.jpg" />
-			</div>
-
-			<div class="sub">( Bandalamenti-esque music intensifies )</div>
+			<p class="michal">Michal Bluma</p>
 		</section>
 
-		<section class="slide-owls">The pages are not what they seem</section>
 
-		<section class="slide-q-eh">Q & Eh?</section>
+		<section class="impact">
+			<h2>Our early decisions will dictate:</h2>
+			<div class="split-2">
+				<ul class="splitted">
+					<li>Wireframes</li>
+					<li>Designs</li>
+					<li>Page templates</li>
+				</ul>
+				<ul class="splitted">
+					<li>Back-end code</li>
+					<li>Front-end code</li>
+					<li>Content entry</li>
+				</ul>
+			</div>
+		</section>
+
+
+		<section class="dealing-with">
+			<h2 class="raised"><span>What are we</span> <span>dealing with?</span></h2>
+
+			<div class="word-list">
+				<span>books</span>
+				<span>shoes</span>
+				<span>cupcakes</span>
+				<span>staff</span>
+				<span>venues</span>
+				<span>cats</span>
+				<span>staplers</span>
+				<span>events</span>
+				<span>hi Roy</span>
+				<span>beer</span>
+				<span>vegan poutine</span>
+				<span>sofas</span>
+				<span>drain pipes</span>
+				<span>ebooks</span>
+				<span>greek gods</span>
+				<span>DC superheroes</span>
+				<span>mental exercises</span>
+				<span>yoga poses</span>
+				<span>barware</span>
+
+			</div>
+		</section>
+
+
+		<section class="how">
+			<h2>How will we</h2>
+			<div class="split-2 fragment">
+				<div class="splitted">Sort it?</div>
+				<div class="splitted">Filter it?</div>
+			</div>
+		</section>
+
+		<section class="slide-q-eh" data-background-image="images/adrian-261817-unsplash.jpg">
+			<h2 class="tp-text raised">Q & eh?</h2>
+			<h4 class="fade-me">Figuring out the properties</h4>
+
+			<div class="word-list">
+				<span>number of pages?</span>
+				<span>number of tentacles?</span>
+				<span>ISBN?</span>
+				<span>author?</span>
+				<span>has been exorcised?</span>
+				<span>declawed?</span>
+
+			</div>
+		</section>
+
+		<section class="think">
+			<h2>Think about<br> EVERYTHING!</h2>
+		</section>
+
+
+
 	</div>
 </div>
 
